# MatchingEngine

./: .gitignore  .gitmodules  CMakeLists.txt  design_doc.md
benchmarks/: CMakeLists.txt  README.md  matching_benchmark.cpp  matching_benchmark_flat.cpp
benchmarks/results/: baseline.json  clustered_baseline.json  clustered_baseline_integration.json  clustered_baseline_integration_fix_scatter.json  clustered_baseline_trades_reserved.json  compiler_flags.json  flat_map_approach.json  iterator_optimizations.json  sorted_flat_array_approach.json
src/: CMakeLists.txt
src/core/: MatchingEngine.cpp  MatchingEngine.hpp  Order.hpp  OrderBook.cpp  OrderBook.hpp  OrderBookFlatSorted.cpp  OrderBookFlatSorted.hpp  OrderGenerator.cpp  OrderGenerator.hpp  Trade.hpp  Types.hpp
tests/: CMakeLists.txt  integration_test.cpp  matching_test.cpp  matching_test_flat.cpp  order_book_flat_sorted_test.cpp  order_book_test.cpp  order_generator_test.cpp
